--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "typecheck": "react-router typegen && tsc",
+    "db:mig": "prisma migrate dev",
+    "db:gen": "prisma generate"
   },
   "dependencies": {
+    "@prisma/client": "^6.4.1",
     "@react-router/fs-routes": "^7.2.0",
     "@react-router/node": "^7.2.0",
     "@react-router/serve": "^7.2.0",
@@ -20,14 +23,16 @@
   "devDependencies": {
     "@react-router/dev": "^7.2.0",
     "@tailwindcss/vite": "^4.0.0",
-    "@types/node": "^20",
+    "@types/node": "^20.17.23",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "clsx": "^2.1.1",
     "daisyui": "^5.0.0",
+    "prisma": "^6.4.1",
     "react-router-devtools": "^1.1.0",
     "tailwindcss": "^4.0.0",
-    "typescript": "^5.7.2",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.2",
     "vite": "^5.4.11",
     "vite-tsconfig-paths": "^5.1.4"
   }
