--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc",
     "db:mig": "prisma migrate dev",
-    "db:gen": "prisma generate"
+    "db:gen": "prisma generate",
+    "db:deploy": "npx prisma migrate deploy"
   },
   "dependencies": {
     "@prisma/client": "^6.4.1",
